# civilisation-os-kernel

./: .gitignore  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: 01_physics_verification_thoughts.md  02_build_troubleshooting.md
docs/specs/: anchor_of_reality.md  atomic_action_definition.md  canonical_serialization_spec.md  civilisational_time_horizon.md  committee_resampling_model.md  consensus_finality_model.md  dark_age_recovery.md  delegation_and_embodiment.md  dispute_resolution_path.md  domain_constitution.md  domain_genesis_protocol.md  domain_thermodynamics_and_energy.md  economic_emission_spec.md  emission_trait_spec.md  epoch_boundary_mechanism.md  epoch_state_root_schema.json.md  epoch_state_struct_spec.md  federation_calendar.md  federation_voting_mechanics.md  final_constitution_blueprint.md  fixed_math_wrapper_spec.md  fixed_point_math_spec.md  fixed_point_truncation_spec.md  fixed_point_width_spec.md  fraud_proof_schema.json.md  fraud_recovery_model.md  fraud_replay_spec.md  freedom_vs_resilience.md  human_comfort_vs_physics.md  identity_singularity.md  master_architecture.md  mathematical_physics_ruleset.md  meaning_of_accountability.md  phase_1_immutable_core.md  phase_2_substrate.md  phase_8_implementation_plan.md  philosophical_north_star.md  proof_of_impact_schema.json.md  resilience_vs_liveness.md  rollback_logistics_and_finality.md  (+11 more)
kernel/: Cargo.toml
kernel/src/: compat.rs  lib.rs  transition.rs
kernel/src/emission/: mod.rs  policy.rs  zero.rs
kernel/src/fraud/: mod.rs  rewind.rs  slashing.rs
kernel/src/math/: fixed.rs  mod.rs  overflow.rs  sqrt.rs
kernel/src/physics/: canonical_json.rs  ed25519.rs  hashing.rs  merkle.rs  mod.rs  sha512.rs
kernel/src/state/: decay.rs  entropy.rs  epoch.rs  mod.rs  witness.rs
