[package]
name = "civilisation-os-kernel"
version = "0.0.0-draft"
edition = "2021"
authors = ["50gramx Foundation"]
description = "The deterministic state transition kernel for Civilisation OS. Consensus-critical. Open source."
license = "MIT OR Apache-2.0"
repository = "https://github.com/50gramx/civilisation-os-kernel"

# This crate compiles to both native (for tests) and wasm32-unknown-unknown.
# No std — allocator is provided by the host embedder in WASM environments.
[lib]
crate-type = ["rlib"]

[dependencies]
# Ed25519 signature verification — the ONLY external dependency.
# Vendored from dalek-cryptography. Pinned exact version. default-features=false
# for no_std + WASM compatibility. Verification-only (no signing in consensus).
#
# WHY EXTERNAL: Custom Ed25519 produced four consensus-fork-class bugs before
# test vectors could even finish. Crypto must be predictable infrastructure,
# not original code. See: ed25519_gate_plan.md for architectural rationale.
#
# AUDIT SURFACE: ed25519-dalek is the most widely used Ed25519 in Rust.
# curve25519-dalek uses proven 5×51-bit radix field arithmetic.
ed25519-dalek = { version = "=2.1.1", default-features = false }

[dev-dependencies]
# Test harness only — std is permitted behind cfg(test).

[features]
# No features — feature flags that alter consensus behavior are constitutionally forbidden.
# Feature flags that change execution semantics create invisible fork vectors.

[profile.release]
# Reproducible builds: panic=abort eliminates unwinding infrastructure variance.
# This also produces smaller WASM artifacts.
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
